<resources>
    <string name="app_name">RetrofitAPP</string>

    <string name="register_account">Register Account</string>
    <string name="enter_last_name">Enter last Name</string>
    <string name="yymmdd">YYMMDD</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_account_information">Enter Your Account Information</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="family_member_information">Family Member Information</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="log_in">Log In</string>

    <string name="error_empty">Please fill your username!</string>
    <string name="error_password">Please fill your password!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
